objects/pse__Utilization_Result__c.object
<CustomObject>
    <customHelpPage>pse__UtilizationResultHelp</customHelpPage>
    <description>Stores the utilization calculation records created for a resource.</description>
    <fields>
        <fullName>pse__Billable_Assignment_Hours__c</fullName>
        <description>The sum of billable hours calculated from the assignments of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of billable hours calculated from the assignments of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Billable Assignment Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Timecard_Hours__c</fullName>
        <description>The sum of billable hours calculated from the timecards of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of billable hours calculated from the timecards of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Billable Timecard Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Calendar_Hours__c</fullName>
        <description>The number of hours from the resource&apos;s work calendar on the date of this utilization result.</description>
        <inlineHelpText>The number of hours from the resource&apos;s work calendar on the date of this utilization result.</inlineHelpText>
        <label>Calendar Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Assignment_Hours__c</fullName>
        <description>The sum of time credited hours calculated from the assignments of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of time credited hours calculated from the assignments of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Credited Assignment Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Timecard_Hours__c</fullName>
        <description>The sum of time credited hours calculated from the timecards of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of time credited hours calculated from the timecards of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Credited Timecard Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Date__c</fullName>
        <description>The calendar date that is associated with this utilization result.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The group that is associated with this utilization result on the specified date.</description>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Utilization Results</relationshipLabel>
        <relationshipName>Utilization_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Held_Resource_Request_Hours__c</fullName>
        <description>The sum of hours calculated from the held resource requests of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of hours calculated from the held resource requests of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Held Resource Request Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Last_Updated_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the utilization run this utilization result relates to.</description>
        <inlineHelpText>Lookup to the utilization run this utilization result relates to.</inlineHelpText>
        <label>Utilization Run</label>
        <referenceTo>pse__Utilization_Run__c</referenceTo>
        <relationshipLabel>Utilization Results</relationshipLabel>
        <relationshipName>Utilization_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Assignment_Hours__c</fullName>
        <description>The sum of non-billable hours calculated from the assignments of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of non-billable hours calculated from the assignments of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Non-Billable Assignment Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Timecard_Hours__c</fullName>
        <description>The sum of non-billable hours calculated from the timecards of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of non-billable hours calculated from the timecards of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Non-Billable Timecard Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The practice that is associated with this utilization result on the specified date.</description>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Utilization Results</relationshipLabel>
        <relationshipName>Utilization_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The region that is associated with this utilization result on the specified date.</description>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Utilization Results</relationshipLabel>
        <relationshipName>Utilization_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <description>The role of the resource that is associated with this utilization calculation result.</description>
        <label>Resource Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the resource associated with this utilization calculation result.</description>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Utilization Results</relationshipLabel>
        <relationshipName>Utilization_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded_Assignment_Hours__c</fullName>
        <description>The sum of time excluded hours calculated from the assignments of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of time excluded hours calculated from the assignments of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Time Excluded Assignment Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded_Timecard_Hours__c</fullName>
        <description>The sum of time excluded hours calculated from the timecards of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of time excluded hours calculated from the timecards of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Time Excluded Timecard Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Unheld_Resource_Request_Hours__c</fullName>
        <description>The sum of hours calculated from the unheld resource requests of the role that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of hours calculated from the unheld resource requests of the role that is associated with this utilization calculation result.</inlineHelpText>
        <label>Unheld Resource Request Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Unique_Identifier__c</fullName>
        <description>The unique identifier for this utilization result record in the format Date, Resource, Resource Role, Region, Practice and Group.</description>
        <inlineHelpText>The unique identifier for this utilization result record in the format Date, Resource, Resource Role, Region, Practice and Group.</inlineHelpText>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Utilization_Excluded_Assignment_Hours__c</fullName>
        <description>The sum of utilization excluded hours calculated from the assignments of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of utilization excluded hours calculated from the assignments of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Utilization Excluded Assignment Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Excluded_Held_RR_Hours__c</fullName>
        <description>The sum of hours excluded from utilization calculated from the held resource requests of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of hours excluded from utilization calculated from the held resource requests of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Utilization Excluded Held RR Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Excluded_Timecard_Hours__c</fullName>
        <description>The sum of utilization excluded hours calculated from the timecards of the resource that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of utilization excluded hours calculated from the timecards of the resource that is associated with this utilization calculation result.</inlineHelpText>
        <label>Utilization Excluded Timecard Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Excluded_Unheld_RR_Hours__c</fullName>
        <description>The sum of hours excluded from utilization calculated from the unheld resource requests of the role that is associated with this utilization calculation result.</description>
        <inlineHelpText>The sum of hours excluded from utilization calculated from the unheld resource requests of the role that is associated with this utilization calculation result.</inlineHelpText>
        <label>Utilization Excluded Unheld RR Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Utilization Result</label>
    <nameField>
        <displayFormat>URS-{000000}</displayFormat>
        <label>Utilization Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>